--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/svg+xml" href="vite.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Equestrian Federation of India</title>
-
+	<!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" /> -->
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
